node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
spec:
  type: NodePort
  selector:
    app: nodejs-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30688
